# HERMES-TRIAGE-AGENT

./: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
runner/: .env.example  README.md  pyproject.toml
runner/src/clinic_agency/: __init__.py  config.py  main.py  telemetry.py
runner/src/clinic_agency/adapters/: case_store.py  convex.py  telegram.py  telegram_sender.py  voice.py
runner/src/clinic_agency/calendar/: __init__.py  convex.py  google.py  service.py
runner/src/clinic_agency/domain/: __init__.py  cases.py  roles.py
runner/src/clinic_agency/evaluation/: __init__.py  execution.py  governance.py  scenarios.py
runner/src/clinic_agency/knowledge/: __init__.py  linkup.py  responder.py  service.py
runner/src/clinic_agency/lifecycle/: __init__.py  execution.py
runner/src/clinic_agency/orchestration/: __init__.py  acknowledgement.py  openai_model.py  (+3 more)
runner/tests/: test_acknowledgement_workflow.py  test_calendar.py  test_calendar_convex.py  test_compliance.py  test_configuration.py  test_convex_deposit_store.py  test_convex_store.py  test_dodo_checkout.py  test_evaluation_execution.py  test_evaluation_governance.py  test_hardening.py  test_health.py  test_hosted_role_execution.py  test_intelligent_telegram_reply.py  test_knowledge_responder.py  test_knowledge_service.py  test_lifecycle_execution.py  test_linkup.py  test_openai_model.py  test_outbound_gate.py  test_planner.py  test_red_flags.py  test_role_runner.py  test_roles.py  test_telegram_sender.py  test_telegram_webhook.py  test_voice_adapters.py
(+44 files in other folders)
