[project]
name = "clinic-agency-runner"
version = "0.1.0"
description = "Safe multi-agent clinic coordination runner"
requires-python = ">=3.11"
dependencies = [
  "dodopayments>=1.108.1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langfuse>=3,<4",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinic_agency"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
